hello-nginx/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nginx
  namespace: hello-nginx
spec:
  selector:
    app: nginx
  ports:
  - name: web
    port: 80
    targetPort: 80
